add update Tests and Database  projects Api_pedidos
