# (node) - Api_Pedidos/src/routes/survey.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from "express";
+import { SurveyController } from "../controllers/SurveyController.ts";
+const router = Router();
+
+const surveyController = new SurveyController();
+router.post("/survey", surveyController.create);
+router.get("/survey", surveyController.show);
+// router.get("/users/:id", userController.getById.bind(userController));
+// router.delete("/users/:id", userController.deleteById.bind(userController));
+export default router;
